--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -7,14 +7,6 @@
 	<exclude-pattern>/vendor/</exclude-pattern>
 	<exclude-pattern>/node_modules/</exclude-pattern>
 
-	 <!-- Tests can do skip formatting, to achieve whatever needed to be a good tests. -->
-    <exclude-pattern>./tests/*</exclude-pattern>
-
-	<!-- Exclude Assets files. -->
-    <exclude-pattern>*.min.js</exclude-pattern>
-    <exclude-pattern>*.js</exclude-pattern>
-    <exclude-pattern>*.css</exclude-pattern>
-
 	<!-- How to scan -->
 	<!-- Usage instructions: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Usage -->
 	<!-- Annotated ruleset: https://github.com/squizlabs/PHP_CodeSniffer/wiki/Annotated-ruleset.xml -->
@@ -26,35 +18,25 @@
 
 	<!-- Rules: Check PHP version compatibility -->
 	<!-- https://github.com/PHPCompatibility/PHPCompatibility#sniffing-your-code-for-compatibility-with-specific-php-versions -->
-	<config name="testVersion" value="7.4-"/>
-	<!-- https://github.com/PHPCompatibility/PHPCompatibility -->
-	<rule ref="PHPCompatibility"/>
+	<config name="testVersion" value="5.6-"/>
+	<!-- https://github.com/PHPCompatibility/PHPCompatibilityWP -->
+	<rule ref="PHPCompatibilityWP"/>
 
 	<!-- Rules: WordPress Coding Standards -->
 	<!-- https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards -->
 	<!-- https://github.com/WordPress-Coding-Standards/WordPress-Coding-Standards/wiki/Customizable-sniff-properties -->
-	<config name="minimum_supported_wp_version" value="6.1"/>
-
-	<!-- Include the WordPress-Extra standard. -->
-    <rule ref="WordPress-Extra">
-        <!-- Allow class file named without class-* format, not always a best thing. -->
-        <exclude name="WordPress.Files.FileName.InvalidClassFileName"/>
-    </rule>
+	<config name="minimum_supported_wp_version" value="4.6"/>
+	<rule ref="WordPress"/>
 	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
 		<properties>
 			<!-- Value: replace the function, class, and variable prefixes used. Separate multiple prefixes with a comma. -->
-			<property name="prefixes" type="array">
-				<element value="wpmudev_plugin_test"/>
-				<element value="WPMUDEV"/>
-			</property>
+			<property name="prefixes" type="array" value="my-plugin"/>
 		</properties>
 	</rule>
 	<rule ref="WordPress.WP.I18n">
 		<properties>
 			<!-- Value: replace the text domain used. -->
-			<property name="text_domain" type="array">
-				<element value="wpmudev-plugin-test"/>
-			</property>
+			<property name="text_domain" type="array" value="my-plugin"/>
 		</properties>
 	</rule>
 	<rule ref="WordPress.WhiteSpace.ControlStructureSpacing">
