--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
 		"test": "tests"
 	},
 	"scripts": {
-		"watch": "clear && webpack --watch --mode development",
-		"compile": "clear && webpack --progress --mode production",
+		"watch": "webpack --watch --mode development",
+		"compile": "webpack --mode production",
 		"translate": "wp i18n make-pot ./ languages/wpmudev-plugin-test.pot --exclude=builds/,node_modules/,src,builds --ignore-domain --allow-root",
-		"build": "clear && grunt preBuildClean && npm run compile && npm run translate && grunt build:pro && grunt finish"
+		"build": "grunt preBuildClean && npm run compile && npm run translate && grunt build:pro && grunt finish"
 	},
 	"author": "WPMU DEV",
 	"license": "GPL-3.0",
@@ -20,13 +20,16 @@
 		"@wpmudev/shared-ui": "2.12.23"
 	},
 	"devDependencies": {
-		"@babel/core": "^7.17.8",
-		"@babel/preset-env": "^7.16.11",
-		"@babel/preset-react": "^7.16.7",
+		"@babel/core": "^7.28.4",
+		"@babel/plugin-proposal-class-properties": "^7.18.6",
+		"@babel/plugin-transform-class-properties": "^7.27.1",
+		"@babel/plugin-transform-runtime": "^7.28.3",
+		"@babel/preset-env": "^7.28.3",
+		"@babel/preset-react": "^7.27.1",
 		"@wordpress/scripts": "^26.17.0",
-		"babel-loader": "^8.2.4",
+		"babel-loader": "^8.4.1",
 		"clean-webpack-plugin": "^4.0.0",
-		"css-loader": "^6.7.1",
+		"css-loader": "^6.11.0",
 		"eslint-plugin-react": "^7.29.4",
 		"grunt": "^1.0.4",
 		"grunt-checktextdomain": "^1.0.1",
@@ -40,14 +43,14 @@
 		"grunt-wp-i18n": "^1.0.3",
 		"gulp": "4.0.2",
 		"load-grunt-tasks": "^5.1.0",
-		"mini-css-extract-plugin": "^2.6.0",
+		"mini-css-extract-plugin": "^2.9.4",
 		"purgecss-webpack-plugin": "^7.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"sass": "^1.56.1",
+		"sass": "^1.93.0",
 		"sass-loader": "^12.6.0",
 		"style-loader": "^3.3.1",
-		"webpack": "^5.70.0",
-		"webpack-cli": "^4.9.2"
+		"webpack": "^5.101.3",
+		"webpack-cli": "^4.10.0"
 	}
 }
