--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,12 @@
 		"firebase/php-jwt": "^6.10"
 	},
 	"require-dev": {
-		"wp-coding-standards/wpcs": "^3.0",
+		"wp-coding-standards/wpcs": "^3.2",
 		"dealerdirect/phpcodesniffer-composer-installer": "^1.0",
 		"phpcompatibility/phpcompatibility-wp": "^2.1",
 		"phpunit/phpunit": "^9.6",
-		"yoast/phpunit-polyfills": "^4.0"
+		"yoast/phpunit-polyfills": "^4.0",
+		"squizlabs/php_codesniffer": "^3.13"
 	},
 	"conflict": {
 		"google/apiclient": "<2.15.0",
