Final push before build

--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
 		"watch": "webpack --watch --mode development",
 		"compile": "webpack --mode production",
 		"translate": "wp i18n make-pot ./ languages/wpmudev-plugin-test.pot --exclude=builds/,node_modules/,src,builds --ignore-domain --allow-root",
-		"build": "grunt preBuildClean && npm run compile && npm run translate && grunt build:pro && grunt finish"
+		"build": "grunt preBuildClean && npm run compile && npm run translate && grunt build:pro && grunt finish",
+		"lint:js": "eslint src/ --ext .js,.jsx --config .eslintrc.js",
+		"lint:js:fix": "eslint src/ --ext .js,.jsx --config .eslintrc.js --fix",
+		"format": "prettier --write src/",
+		"lint:php": "./vendor/bin/phpcs --standard=WordPress --extensions=php app/ core/ wpmudev-plugin-test.php",
+		"lint:php:fix": "./vendor/bin/phpcbf --standard=WordPress --extensions=php app/ core/ wpmudev-plugin-test.php"
 	},
 	"author": "WPMU DEV",
 	"license": "GPL-3.0",
@@ -26,11 +31,15 @@
 		"@babel/plugin-transform-runtime": "^7.28.3",
 		"@babel/preset-env": "^7.28.3",
 		"@babel/preset-react": "^7.27.1",
+		"@wordpress/eslint-plugin": "^22.17.0",
+		"@wordpress/prettier-config": "^4.31.0",
 		"@wordpress/scripts": "^26.17.0",
 		"babel-loader": "^8.4.1",
 		"clean-webpack-plugin": "^4.0.0",
 		"css-loader": "^6.11.0",
-		"eslint-plugin-react": "^7.29.4",
+		"eslint": "^8.57.1",
+		"eslint-plugin-react": "^7.37.5",
+		"eslint-plugin-react-hooks": "^5.2.0",
 		"grunt": "^1.0.4",
 		"grunt-checktextdomain": "^1.0.1",
 		"grunt-contrib-clean": "^2.0.0",
@@ -44,6 +53,7 @@
 		"gulp": "4.0.2",
 		"load-grunt-tasks": "^5.1.0",
 		"mini-css-extract-plugin": "^2.9.4",
+		"prettier": "^3.6.2",
 		"purgecss-webpack-plugin": "^7.0.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
